--- a/lecture14-DynamicPaths/views/store/fav-list.ejs
+++ b/lecture14-DynamicPaths/views/store/fav-list.ejs
@@ -245,7 +245,7 @@
                         d="M14 5l7 7m0 0l-7 7m7-7H3"/>
                 </svg>
               </a>
-              
+              <form action="/favorite/delete/<%= home.id %>" method="POST">
               <button class="text-center py-2.5 rounded-xl
                            bg-white/5 border border-white/10 text-gray-300
                            hover:bg-white/10 hover:border-white/20
@@ -258,6 +258,7 @@
                         d="M6 18L18 6M6 6l12 12"/>
                 </svg>
               </button>
+              </form>
             </div>
           </div>
         </div>
