--- a/lecture15-SQL/views/store/home-list.ejs
+++ b/lecture15-SQL/views/store/home-list.ejs
@@ -134,7 +134,7 @@
           <!-- Image -->
           <div class="h-48 md:h-56 overflow-hidden relative">
             <img
-              src="<%= home.photoUrl %>"
+              src="<%= home.photoUrl p%>"
               alt="<%= home.houseName %>"
               class="w-full h-full object-cover
                      transition-transform duration-700
